5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1728_2497.log
== TEST (2019-05-08 18:36:58) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi=float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (teste>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = ????
	print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
File "XXXX", line 17
    t = ????
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:38:13) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi=float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (teste>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = tempo
	print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while (teste>1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:39:42) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi=float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = tempo
	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:41:39) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi=float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (q1>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = tempo
	print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while (q1>1):
NameError: name 'q1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:41:52) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi=float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = tempo
	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:42:36) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi=float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = tempo
	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:42:36) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi=float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = tempo
	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:42:36) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi=float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = tempo
	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:07:09) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi=float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t<=tempo):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t+1
	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 19:08:00) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi=float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t<=tempo):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t+1
	print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.213343
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
965.6
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
1614.1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 19:08:05) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi=float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t<tempo):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t+1
	print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.214357
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
Quantia inicial: Tempo de investimento: 858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
Quantia inicial: Tempo de investimento: 1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:09:03) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi=float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t<=tempo):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t+1
print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
756.99
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:09:34) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi=float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t<tempo):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t+1
print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 19:09:35) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi=float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t<tempo):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t+1
print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.158633
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1552.02
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 19:09:44) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi=float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t<=tempo):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t+1
print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.177151
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
756.99
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
965.6
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1614.1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 19:10:37) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi=float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 1

# Atualizacao de saldo
while (t<tempo):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t+1
print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.149482
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
699.88
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
892.75
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1492.33
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 19:10:46) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi=float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 1

# Atualizacao de saldo
while (t<=tempo):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t+1
print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.127474
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1552.02
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 19:13:10) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi=float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 1

# Atualizacao de saldo
while (t<=tempo):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t+1
	print(round(saldo, 2)) # Exibicao de resultados
if(tempo==0):
	print(round(saldo, 2))
	

-- EXECUTION TIME:
0.136615
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 19:15:01) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi=float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 1

# Atualizacao de saldo
while (t<tempo):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t+1
	print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.158612
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 19:15:11) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi=float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 1

# Atualizacao de saldo
while (t<=tempo):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t+1
	print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.153962
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 19:15:58) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi=float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t<tempo):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t+1
	print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.177766
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 19:16:18) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi=float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 2

# Atualizacao de saldo
while (t<tempo):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t+1
	print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.127263
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 19:16:24) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi=float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t<tempo):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t+1
	print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.208313
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
